# solana-counter

./: .gitignore  Anchor.toml  Cargo.toml  README.md
app/: interact.mjs  package.json
client/: Cargo.toml
client/src/: main.rs
programs/solana-counter/: Cargo.toml
programs/solana-counter/src/: constants.rs  lib.rs  state.rs
programs/solana-counter/src/instructions/: increment.rs  initialize.rs
programs/solana-counter/tests/: test_initialize.rs
